[package]
name = "msg"
version = "0.1.0"
authors = ["Isabelle L. <me@izzabelle.dev>"]
edition = "2018"

[dependencies]
structopt = "0.3.14"
async-std = { version = "1.5.0",features = ["attributes"] }
chrono = "0.4.11"
serde = { version = "1.0.107", features = ["derive"] }
serde_json = "1.0.52"
uuid = { version  = "0.8.1", features = ["v4"] }
lazy_static = "1.4.0"
futures = "0.3.5"
futures-util = "0.3.5"
