[package]
name = "msg"
version = "0.1.0"
authors = ["Isabelle L. <me@izzabelle.dev>"]
edition = "2018"

[dependencies]
async-std = { version = "1.5.0",features = ["attributes"] }
serde = { version = "1.0.107", features = ["derive"] }
uuid = { version  = "0.8.1", features = ["v4"] }
futures-util = "0.3.5"
serde_json = "1.0.52"
lazy_static = "1.4.0"
structopt = "0.3.14"
chrono = "0.4.11"
futures = "0.3.5"
toml = "0.5.6"
