[package]
name = "msg"
version = "0.1.0"
authors = ["Isabelle L. <me@izzabelle.dev>"]
edition = "2018"

[dependencies]
async-std = { version = "1.5.0",features = ["attributes"] }
serde = { version = "1.0.107", features = ["derive"] }
uuid = { version  = "0.8.1", features = ["v4"] }
futures-util = "0.3.5"
serde_json = "1.0.52"
lazy_static = "1.4.0"
structopt = "0.3.14"
chrono = "0.4.11"
futures = "0.3.5"
toml = "0.5.6"
ilmp = { git = "https://github.com/izzabelle/ilmp" }
# ilmp = { path = "../ilmp"}
ring = "0.16.13"
thiserror = "1.0.18"
orion = "0.15.1"
termion = "1.5.5"
tui = "0.9.4"
